bugfix flicker of the unfolding div in chrome

--- a/css/pfold.css
+++ b/css/pfold.css
@@ -67,6 +67,8 @@
 	-o-backface-visibility: hidden;
 	-ms-backface-visibility: hidden;
 	backface-visibility: hidden;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
 }
 
 .uc-part .uc-back {
